letter spacing fixed

--- a/src/app/components/about-founder/about-founder.component.scss
+++ b/src/app/components/about-founder/about-founder.component.scss
@@ -20,7 +20,7 @@
       h1 {
         font-size: 48px;
         line-height: 70px;
-        letter-spacing: -2px;
+        // letter-spacing: -2px;
         margin-bottom: 35px;
       }
       p {
@@ -32,7 +32,6 @@
     aside {
       img.mobile {
         display: none;
-        // visibility: hidden; //??
       }
     }
   }
@@ -73,7 +72,6 @@
         }
 
         img.mobile {
-          // visibility: visible;
           display: inline;
         }
       }
